--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">WebStudio</a>
-             <ul>
+            <a class="logo" href="/">WebStudio</a>
+             <ul class="site-nav list">
                 <li><a href="/">Студія</a></li>
                 <li><a href="/portfolio.html">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
-            <ul>
+            <ul class="contacts list">
                 <li><a href="info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="+380961111111"> +38 096 111 11 11</a></li>
             </ul>
