--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <a href="/" class="logo"><span class="web-logo">Web</span>Studio</a>
              
             <ul class="site-nav list">
-                <li><a href="/" class="link">Студія</a></li>
-                <li><a href="/portfolio.html" class="link">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
+                <li><a href="/" class="link current">Студія</a></li>
+                <li><a href="/portfolio.html" class="link current">Портфоліо</a></li>
+                <li><a href="" class="link current">Контакти</a></li>
             </ul>
         </nav>
             <ul class="contacts list">
@@ -26,7 +26,7 @@
 <main>
         <section class="hero">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button type="button primary">Замовити послугу</button>
         </section>
 
     <section class="section">
