--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/" class="logo"><span class="web-logo">Web</span>Studio</a>
+            <a href="./index.html" class="logo"><span class="web-logo">Web</span>Studio</a>
              
             <ul class="site-nav list">
                 <li><a href="./index.html" class="link">Студія</a></li>
@@ -26,7 +27,7 @@
 <main>
         <section class="hero">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button primary">Замовити послугу</button>
+            <button type="button">Замовити послугу</button>
         </section>
 
     <section class="section">
@@ -59,7 +60,7 @@
     </section>
 
     <section class="section">
-        <h2>Чим ми займаємося</h2>
+        <h2 class="second-title">Чим ми займаємося</h2>
          <ul class="work list">
             
             <li>
@@ -76,7 +77,7 @@
     </section>
 
     <section class="section">
-        <h2>Наша команда</h2>
+        <h2 class="second-title">Наша команда</h2>
         <ul class="work list">
             <li>
                 <img src="./images/p1.jpg" alt="Ігор Дем'яненко" width="270" >
