--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/" class="logo"><span class="web-logo">Web</span>Studio</a>
+            <a href="./index.html" class="logo"><span class="web-logo">Web</span>Studio</a>
              
             <ul class="site-nav list">
                 <li><a href="./index.html" class="link">Студія</a></li>
@@ -38,64 +39,64 @@
             <ul class="projects list">
                 <li>
                     <img src="./images/portfolio/notebook.jpg" alt="Технокряк" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p>
+                    <h2 class="title">Технокряк</h2>
+                    <p class="desc">
                         Веб-сайт
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="desc">
                         Дизайн
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h2>Ресторан Seafood</h2>
-                    <p>
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="desc">
                         Додаток
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/headphones.jpg" alt="Проєкт Prime" width="370" height="294">
-                    <h2>Проєкт Prime</h2>
-                    <p>
+                    <h2 class="title">Проєкт Prime</h2>
+                    <p class="desc">
                         Маркетинг
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
-                    <h2>Проєкт Boxes</h2>
-                    <p>
+                    <h2 class="title">Проєкт Boxes</h2>
+                    <p class="desc">
                         Додаток
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/display.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="desc">
                         Веб-сайт
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/book.jpg" alt="Видання Limited Edition" width="370" height="294">
-                    <h2>Видання Limited Edition</h2>
-                    <p>
+                    <h2 class="title">Видання Limited Edition</h2>
+                    <p class="desc">
                         Дизайн
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/tag.jpg" alt="Проєкт LAB" width="370" height="294">
-                    <h2>Проєкт LAB</h2>
-                    <p>
+                    <h2 class="title">Проєкт LAB</h2>
+                    <p class="desc">
                         Маркетинг
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/leptop.jpg" alt="Growing Business" width="370" height="294">
-                    <h2>Growing Business</h2>
-                    <p>
+                    <h2 class="title">Growing Business</h2>
+                    <p class="desc">
                         Додаток
                     </p>
                 </li>
