--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
              
             <ul class="site-nav list">
                 <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="/portfolio.html" class="link">Портфоліо</a></li>
+                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
                 <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
