--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <main>
         <section class="hero">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button class="hero-button" type="button">Замовити послугу</button>
         </section>
 
     <section class="section">
@@ -125,6 +125,3 @@
 </footer>
 </body>
 </html>
-
-<!--ERGERGERG-->
-<!--ERGERGERG-->
