--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,11 @@
         <section class="section">
             <h1 class="hero-title">Проекти</h1>
             <ul class="button-list list">
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="button" type="button">Усі</button></li>
+                <li><button class="button" type="button">Веб-сайти</button></li>
+                <li><button class="button" type="button">Додатки</button></li>
+                <li><button class="button" type="button">Дизайн</button></li>
+                <li><button class="button" type="button">Маркетинг</button></li>
             </ul>
             <ul class="projects list">
                 <li>
