--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,8 +20,8 @@
             </ul>
         </nav>
             <ul class="contacts list">
-                <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="+380961111111"> +38 096 111 11 11</a></li>
+                <li><a href="info@devstudio.com" class="contact">info@devstudio.com</a></li>
+                <li><a href="+380961111111" class="contact">+38 096 111 11 11</a></li>
             </ul>
     </header>
 
@@ -110,8 +110,8 @@
         <ul class="address list">
         
             <li><a href="https://goo.gl/maps/pwcy8Wqo1RzwF6ERA" target="_blank" rel="noreferrer noopener" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="info@devstudio.com" class="email">info@devstudio.com</a></li>
-            <li><a href="+380961111111" class="phone">+38 096 111 11 11</a></li>
+            <li><a href="info@devstudio.com" class="contact-info">info@devstudio.com</a></li>
+            <li><a href="+380961111111" class="contact-info">+38 096 111 11 11</a></li>
         
         </ul>
       </address>
