--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href="./index.html" class="logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
              
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
+                <li><a href="./index.html" class="header-link link">Студія</a></li>
+                <li><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
+                <li><a href="" class="header-link link">Контакти</a></li>
             </ul>
         </nav>
             <ul class="contacts list">
@@ -29,34 +29,34 @@
     </header>
 <main>
         <section class="section hero">
-            <div class="container">
+            <div class="hero-container container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="hero-button" type="button">Замовити послугу</button>
         </section>
             </div>
 
     <section class="section">
-        <div class="container">
+        <div class="feature-container container">
         <ul class="feature list">
-            <li>
+            <li class="feature-item">
                 <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="text">
                     Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                 </p>
             </li>
-            <li>
+            <li class="feature-item">
                 <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="text">
                     Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                 </p>
             </li>
-            <li>
+            <li class="feature-item">
                 <h3 class="title">ПЛАНУВАННЯ</h3>
                 <p class="text">
                     Так само консультація з широким активом значною мірою зумовлює.
                 </p>
             </li>
-            <li>
+            <li class="feature-item">
                 <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="text">
                     Значимість цих проблем настільки очевидна, що реалізація планових завдань.
