--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
        
         <section class="section">
             <div class="container">
-            <h1 class="hero-title">Проекти</h1>
+            <h1 class="hidden-title">Проекти</h1>
             <ul class="button-list list">
                 <li><button class="button" type="button">Усі</button></li>
                 <li><button class="button" type="button">Веб-сайти</button></li>
@@ -43,73 +43,91 @@
             <ul class="projects-list list">
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/notebook.jpg" alt="Технокряк" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Технокряк</h2>
                     <p class="desc">
                         Веб-сайт
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Постер New Orlean vs Golden Star</h2>
                     <p class="desc">
                         Дизайн
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Ресторан Seafood</h2>
                     <p class="desc">
                         Додаток
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/headphones.jpg" alt="Проєкт Prime" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Проєкт Prime</h2>
                     <p class="desc">
                         Маркетинг
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Проєкт Boxes</h2>
                     <p class="desc">
                         Додаток
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/display.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Inspiration has no Borders</h2>
                     <p class="desc">
                         Веб-сайт
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/book.jpg" alt="Видання Limited Edition" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Видання Limited Edition</h2>
                     <p class="desc">
                         Дизайн
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/tag.jpg" alt="Проєкт LAB" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Проєкт LAB</h2>
                     <p class="desc">
                         Маркетинг
                     </p>
+                    </div>
                 </li>
                 <li class="projects-item">
                     <img class="project-img" src="./images/portfolio/leptop.jpg" alt="Growing Business" width="370" height="294">
+                    <div class="project">
                     <h2 class="title">Growing Business</h2>
                     <p class="desc">
                         Додаток
                     </p>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <a href="/" class="footer-logo logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
             <address>
