--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -28,14 +28,13 @@
         </div>
     </header>
 <main>
-        <section class="section hero">
+        <section class="section-hero section ">
             <div class="hero-container container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="hero-button" type="button">Замовити послугу</button>
-        </section>
             </div>
-
-    <section class="section">
+        </section>
+    <section class="feature-section section">
         <div class="feature-container container">
         <ul class="feature-list list">
             <li class="feature-item">
@@ -118,7 +117,7 @@
             </li>
             <li>
                 <img class="image" src="./images/p4.jpg" alt="Михайло Єрмаков" width="270" >
-                <div class="team4"></div>
+                <div class="team4">
                 <h3 class="name">Михайло Єрмаков</h3>
                 <p lang="en" class="direction">
                     UI Designer
@@ -130,7 +129,7 @@
         </div>
     </section>
 </main>   
-<footer>
+<footer class="footer">
     <div class="container">
     <a href="/" class="footer-logo logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
   <address>
