team-section done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             </ul>
         </nav>
             <ul class="contacts list">
-                <li><a href="info@devstudio.com" class="contact">info@devstudio.com</a></li>
+                <li><a href="info@devstudio.com" class="contact">
+                    <svg class="contact-icon">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>info@devstudio.com</a></li>
                 <li><a href="+380961111111" class="contact">+38 096 111 11 11</a></li>
             </ul>
         </div>
@@ -84,44 +87,148 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="team-section section">
         <div class="container">
         <h2 class="second-title">Наша команда</h2>
         <ul class="team-list list">
-            <li>
+            <li class="team-item">
                 <img class="image" src="./images/p1.jpg" alt="Ігор Дем'яненко" width="270" >
                 <div class="team1">
                 <h3 class="name">Ігор Дем'яненко</h3>
                 <p lang="en" class="direction">
                     Product Designer
                 </p>
+                    <ul class="social-icons list">
+                        <li class="social-item"><a class="social-link link" href="https://www.instagram.com/" aria-label="Instagram"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
+                                rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://www.facebook.com/" aria-label="Facebook"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                </svg></a>
+                        </li>
+                    </ul>
                 </div>
+                
             </li>
-            <li>
+            <li class="team-item">
                 <img class="image" src="./images/p2.jpg" alt="Ольга Рєпіна" width="270" >
                 <div class="team2">
                 <h3 class="name">Ольга Рєпіна</h3>
                 <p lang="en" class="direction">
                     Frontend Developer
                 </p>
+                    <ul class="social-icons list">
+                        <li class="social-item"><a class="social-link link" href="https://www.instagram.com/" aria-label="Instagram"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
+                                rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://www.facebook.com/" aria-label="Facebook"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                </svg></a>
+                        </li>
+                    </ul>
                 </div>
             </li>
-            <li>
+            <li class="team-item">
                 <img class="image" src="./images/p3.jpg" alt="Микола Тарасов" width="270" >
                 <div class="team3">
                 <h3 class="name">Микола Тарасов</h3>
                 <p lang="en" class="direction">
                     Marketing
                 </p>
+                    <ul class="social-icons list">
+                        <li class="social-item"><a class="social-link link" href="https://www.instagram.com/" aria-label="Instagram"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
+                                rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://www.facebook.com/" aria-label="Facebook"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-item"><a class="social-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
+                                target="_blank" rel="noreferrer noopener">
+                                <svg class="team-icon" width="20px" height="20px">
+                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                </svg></a>
+                        </li>
+                    </ul>
                 </div>
             </li>
-            <li>
+            <li class="team-item">
                 <img class="image" src="./images/p4.jpg" alt="Михайло Єрмаков" width="270" >
                 <div class="team4">
                 <h3 class="name">Михайло Єрмаков</h3>
                 <p lang="en" class="direction">
                     UI Designer
                 </p>
+                <ul class="social-icons list">
+                    <li class="social-item"><a class="social-link link" href="https://www.instagram.com/" aria-label="Instagram" target="_blank" rel="noreferrer noopener">
+                        <svg class="team-icon" width="20px" height="20px">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+                    </li>
+                    <li class="social-item"><a class="social-link link" href="https://twitter.com/" aria-label="Twitter"
+                            target="_blank" rel="noreferrer noopener">
+                        <svg class="team-icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#icon-twitter"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-item"><a class="social-link link" href="https://www.facebook.com/" aria-label="Facebook"
+                            target="_blank" rel="noreferrer noopener">
+                        <svg class="team-icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#icon-facebook"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-item"><a class="social-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
+                            target="_blank" rel="noreferrer noopener">
+                        <svg class="team-icon" width="20px" height="20px">
+                            <use href="/images/icons.svg#icon-linkedin"></use>
+                        </svg></a>
+                    </li>  
+                </ul>
                 </div>
             </li>
 
