--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@
                 <li><a href="" class="header-link link">Контакти</a></li>
             </ul>
         </nav>
+            <div class="header-contacts">
             <ul class="contacts list">
                 <li><a href="info@devstudio.com" class="contact">
-                    <svg class="contact-icon">
-                        <use href="./images/icons.svg#icon-envelope"></use>
-                    </svg>info@devstudio.com</a></li>
-                <li><a href="+380961111111" class="contact">+38 096 111 11 11</a></li>
+                        <svg class="contact-icon" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+                    </a>
+                </li>
+                <li><a href="+380961111111" class="contact">
+                        <svg class="contact-icon" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
+                </li>
             </ul>
+            </div>
         </div>
     </header>
 <main>
@@ -41,24 +50,44 @@
         <div class="feature-container container">
         <ul class="feature-list list">
             <li class="feature-item">
+                <div class="feature-images">
+                    <svg class="feature-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                </div>
                 <h3 class="feature-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="text">
                     Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                 </p>
             </li>
             <li class="feature-item">
+                <div class="feature-images">
+                    <svg class="feature-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                </div>
                 <h3 class="feature-title title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="text">
                     Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                 </p>
             </li>
             <li class="feature-item">
+                <div class="feature-images">
+                    <svg class="feature-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                </div>
                 <h3 class="feature-title title">ПЛАНУВАННЯ</h3>
                 <p class="text">
                     Так само консультація з широким активом значною мірою зумовлює.
                 </p>
             </li>
             <li class="feature-item">
+                <div class="feature-images">
+                    <svg class="feature-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                </div>
                 <h3 class="feature-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="text">
                     Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -238,8 +267,11 @@
 </main>   
 <footer class="footer">
     <div class="container">
+        <div class="footer-content">
+    <div class="logo-adress">
     <a href="/" class="footer-logo logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
-  <address>
+    <div class="adress-content">
+    <address>
     <ul class="address list">
     
         <li><a href="https://goo.gl/maps/pwcy8Wqo1RzwF6ERA" target="_blank" rel="noreferrer noopener" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
@@ -248,6 +280,41 @@
     
     </ul>
   </address>
+    </div>
+    </div>
+    <div class="social">
+        <h2 class="footer-title">приєднуйтесь</h2>
+        <div class="footer-icons">
+        <ul class="footer-icon list">
+            <li class="social-item"><a class="footer-link link" href="https://www.instagram.com/" aria-label="Instagram"
+                    target="_blank" rel="noreferrer noopener">
+                    <svg class="soc-icon" width="20px" height="20px">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+            </li>
+            <li class="social-item"><a class="footer-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
+                    rel="noreferrer noopener">
+                    <svg class="soc-icon" width="20px" height="20px">
+                        <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+            </li>
+            <li class="social-item"><a class="footer-link link" href="https://www.facebook.com/" aria-label="Facebook"
+                    target="_blank" rel="noreferrer noopener">
+                    <svg class="soc-icon" width="20px" height="20px">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg></a>
+            </li>
+            <li class="social-item"><a class="footer-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
+                    target="_blank" rel="noreferrer noopener">
+                    <svg class="soc-icon" width="20px" height="20px">
+                        <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
+            </li>
+        </ul>
+        </div>
+
+    </div>
+    </div>
     </div>
 </footer>
 </body>
