--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="feature-item">
                 <div class="feature-images">
                     <svg class="feature-icon" width="70px" height="70px">
-                        <use href="./images/icons.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg#icon-clock"></use>
                     </svg>
                 </div>
                 <h3 class="feature-title title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -74,7 +74,7 @@
             <li class="feature-item">
                 <div class="feature-images">
                     <svg class="feature-icon" width="70px" height="70px">
-                        <use href="./images/icons.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg#icon-diagram"></use>
                     </svg>
                 </div>
                 <h3 class="feature-title title">ПЛАНУВАННЯ</h3>
@@ -85,7 +85,7 @@
             <li class="feature-item">
                 <div class="feature-images">
                     <svg class="feature-icon" width="70px" height="70px">
-                        <use href="./images/icons.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg#icon-astronaut"></use>
                     </svg>
                 </div>
                 <h3 class="feature-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -262,6 +262,43 @@
             </li>
 
         </ul>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <h2 class="second-title">Постійні клієнти</h2>
+            <ul class="partners-list list">
+                <li><a class="partners-link link" href="" target="_blank" rel="noreferrer noopener">
+                    <svg class="partners-icon" width="106px" height="60px">
+                        <use href="./images/icons.svg#icon-Logo1"></use>
+                    </svg></a>
+                </li>
+                <li><a class="partners-link link" href="" target="_blank" rel="noreferrer noopener">
+                        <svg class="partners-icon" width="106px" height="60px">
+                            <use href="./images/icons.svg#icon-Logo2"></use>
+                        </svg></a>
+                </li>
+                <li><a class="partners-link link" href="" target="_blank" rel="noreferrer noopener">
+                        <svg class="partners-icon" width="106px" height="60px">
+                            <use href="./images/icons.svg#icon-Logo3"></use>
+                        </svg></a>
+                </li>
+                <li><a class="partners-link link" href="" target="_blank" rel="noreferrer noopener">
+                        <svg class="partners-icon" width="106px" height="60px">
+                            <use href="./images/icons.svg#icon-Logo4"></use>
+                        </svg></a>
+                </li>
+                <li><a class="partners-link link" href="" target="_blank" rel="noreferrer noopener">
+                        <svg class="partners-icon" width="106px" height="60px">
+                            <use href="./images/icons.svg#icon-Logo5"></use>
+                        </svg></a>
+                </li>
+                <li><a class="partners-link link" href="" target="_blank" rel="noreferrer noopener">
+                        <svg class="partners-icon" width="106px" height="60px">
+                            <use href="./images/icons.svg#icon-Logo6"></use>
+                        </svg></a>
+                </li>
+            </ul>
         </div>
     </section>
 </main>   
