--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
                         <li class="social-item"><a class="social-link link" href="https://www.instagram.com/" aria-label="Instagram"
                                 target="_blank" rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg></a>
                         </li>
                         <li class="social-item"><a class="social-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
                                 rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg></a>
                         </li>
                         <li class="social-item"><a class="social-link link" href="https://www.facebook.com/" aria-label="Facebook"
                                 target="_blank" rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg></a>
                         </li>
                         <li class="social-item"><a class="social-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
                                 target="_blank" rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg></a>
                         </li>
                     </ul>
@@ -311,9 +311,9 @@
     <address>
     <ul class="address list">
     
-        <li><a href="https://goo.gl/maps/pwcy8Wqo1RzwF6ERA" target="_blank" rel="noreferrer noopener" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li><a href="info@devstudio.com" class="contact-info mail">info@devstudio.com</a></li>
-        <li><a href="+380961111111" class="contact-info">+38 096 111 11 11</a></li>
+        <li class="addres-item"><a href="https://goo.gl/maps/pwcy8Wqo1RzwF6ERA" target="_blank" rel="noreferrer noopener" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
+        <li class="addres-item"><a href="info@devstudio.com" class="contact-info mail">info@devstudio.com</a></li>
+        <li class="addres-item"><a href="+380961111111" class="contact-info">+38 096 111 11 11</a></li>
     
     </ul>
   </address>
@@ -326,25 +326,25 @@
             <li class="social-item"><a class="footer-link link" href="https://www.instagram.com/" aria-label="Instagram"
                     target="_blank" rel="noreferrer noopener">
                     <svg class="soc-icon" width="20px" height="20px">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                     </svg></a>
             </li>
             <li class="social-item"><a class="footer-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
                     rel="noreferrer noopener">
                     <svg class="soc-icon" width="20px" height="20px">
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a>
             </li>
             <li class="social-item"><a class="footer-link link" href="https://www.facebook.com/" aria-label="Facebook"
                     target="_blank" rel="noreferrer noopener">
                     <svg class="soc-icon" width="20px" height="20px">
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a>
             </li>
             <li class="social-item"><a class="footer-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
                     target="_blank" rel="noreferrer noopener">
                     <svg class="soc-icon" width="20px" height="20px">
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a>
             </li>
         </ul>
