--- a/index.html
+++ b/index.html
@@ -202,25 +202,25 @@
                         <li class="social-item"><a class="social-link link" href="https://www.instagram.com/" aria-label="Instagram"
                                 target="_blank" rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg></a>
                         </li>
                         <li class="social-item"><a class="social-link link" href="https://twitter.com/" aria-label="Twitter" target="_blank"
                                 rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg></a>
                         </li>
                         <li class="social-item"><a class="social-link link" href="https://www.facebook.com/" aria-label="Facebook"
                                 target="_blank" rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg></a>
                         </li>
                         <li class="social-item"><a class="social-link link" href="https://www.linkedin.com/" aria-label="LinkedIn"
                                 target="_blank" rel="noreferrer noopener">
                                 <svg class="team-icon" width="20px" height="20px">
-                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg></a>
                         </li>
                     </ul>
