--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href="./index.html" class="logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
              
             <ul class="site-nav list">
-                <li class="nav-item"><a href="./index.html" class="header-link link">Студія</a></li>
-                <li class="nav-item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
-                <li class="nav-item"><a href="" class="header-link link">Контакти</a></li>
+                <li class="nav-item"><a href="./index.html" class="header-link link current">Студія</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="header-link link current">Портфоліо</a></li>
+                <li class="nav-item"><a href="" class="header-link link current">Контакти</a></li>
             </ul>
         </nav>
             <div class="header-contacts">
