--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="section-hero section ">
             <div class="hero-container container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="hero-button" type="button">Замовити послугу</button>
+            <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
             </div>
         </section>
     <section class="feature-section section">
@@ -363,5 +363,15 @@
     </div>
     </div>
 </footer>
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+            <svg class="modal-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-close-icon"></use>
+            </svg>
+        </button>
+    </div>
+</div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
