--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
         <div class="header-container container">
             <nav class="header-nav">
                 <a href="./index.html" class="logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
         
                 <ul class="site-nav list">
-                    <li><a href="./index.html" class="header-link link">Студія</a></li>
-                    <li><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
-                    <li><a href="" class="header-link link">Контакти</a></li>
+                    <li class="nav-item"><a href="./index.html" class="header-link link current">Студія</a></li>
+                    <li class="nav-item"><a href="./portfolio.html" class="header-link link current">Портфоліо</a></li>
+                    <li class="nav-item"><a href="" class="header-link link current">Контакти</a></li>
                 </ul>
             </nav>
             <div class="header-contacts">
@@ -54,9 +53,17 @@
             </ul>
             <ul class="projects-list list">
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/notebook.jpg" alt="Технокряк" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Технокряк</h2>
                     <p class="desc">
@@ -65,9 +72,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Постер New Orlean vs Golden Star</h2>
                     <p class="desc">
@@ -76,9 +92,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Ресторан Seafood</h2>
                     <p class="desc">
@@ -87,9 +112,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/headphones.jpg" alt="Проєкт Prime" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Проєкт Prime</h2>
                     <p class="desc">
@@ -98,9 +132,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Проєкт Boxes</h2>
                     <p class="desc">
@@ -109,9 +152,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                     <img class="project-img" src="./images/portfolio/display.jpg" alt="Inspiration has no Borders" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Inspiration has no Borders</h2>
                     <p class="desc">
@@ -120,9 +172,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                    <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/book.jpg" alt="Видання Limited Edition" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Видання Limited Edition</h2>
                     <p class="desc">
@@ -131,9 +192,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                   <div class="project-thumb"> 
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/tag.jpg" alt="Проєкт LAB" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Проєкт LAB</h2>
                     <p class="desc">
@@ -142,9 +212,18 @@
                     </div>
                 </li>
                 <li class="projects-item">
+                   <div class="project-thumb">
                     <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
                         <img class="project-img" src="./images/portfolio/leptop.jpg" alt="Growing Business" width="370" height="294">
                     </a>
+                    <div class="project-overlay">
+                        <p class="overlay-text">
+                            Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                            отримати
+                            вичерпні відомості про компанію чи приватну особу.
+                        </p>
+                    </div>
+                    </div>
                     <div class="project">
                     <h2 class="title">Growing Business</h2>
                     <p class="desc">
