--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
              
             <ul class="site-nav list">
                 <li class="nav-item"><a href="./index.html" class="header-link link current">Студія</a></li>
-                <li class="nav-item"><a href="./portfolio.html" class="header-link link current">Портфоліо</a></li>
-                <li class="nav-item"><a href="" class="header-link link current">Контакти</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="header-link link">Портфоліо</a></li>
+                <li class="nav-item"><a href="" class="header-link link">Контакти</a></li>
             </ul>
         </nav>
             <div class="header-contacts">
@@ -105,19 +105,19 @@
             <li class="work-item">
                 <img src="./images/imgc.jpg" alt="Десктопні додатки" width="370" >
                 <div class="work-overlay">
-                    <h3 class="div-title">Десктопні додатки</h3>
+                    <p class="div-title">Десктопні додатки</p>
                 </div>
             </li>
             <li class="work-item">
                 <img src="./images/imgp.jpg" alt="Мобільні додатки" width="370" >
                 <div class="work-overlay">
-                    <h3 class="div-title">Мобільні додатки</h3>
+                    <p class="div-title">Мобільні додатки</p>
                 </div>
             </li>
             <li class="work-item">
                 <img src="./images/imgt.jpg" alt="Дизайнерські рішення" width="370" >
                 <div class="work-overlay">
-                    <h3 class="div-title">Дизайнерські рішення</h3>
+                    <p class="div-title">Дизайнерські рішення</p>
                 </div>
             </li>
            
@@ -365,7 +365,7 @@
 </footer>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-        <button class="modal-btn" type="button" data-modal-close>
+        <button class="modal-btn is-hidden" type="button" data-modal-close>
             <svg class="modal-icon" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-close-icon"></use>
             </svg>
