--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
                 <a href="./index.html" class="logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
         
                 <ul class="site-nav list">
-                    <li class="nav-item"><a href="./index.html" class="header-link link current">Студія</a></li>
+                    <li class="nav-item"><a href="./index.html" class="header-link link">Студія</a></li>
                     <li class="nav-item"><a href="./portfolio.html" class="header-link link current">Портфоліо</a></li>
-                    <li class="nav-item"><a href="" class="header-link link current">Контакти</a></li>
+                    <li class="nav-item"><a href="" class="header-link link">Контакти</a></li>
                 </ul>
             </nav>
             <div class="header-contacts">
@@ -87,7 +87,7 @@
                     <div class="project">
                     <h2 class="title">Постер New Orlean vs Golden Star</h2>
                     <p class="desc">
-                        Дизайн
+                        Дизайн.
                     </p>
                     </div>
                 </li>
@@ -261,25 +261,25 @@
                     <li class="social-item"><a class="footer-link link" href="https://www.instagram.com/"
                             aria-label="Instagram" target="_blank" rel="noreferrer noopener">
                             <svg class="soc-icon" width="20px" height="20px">
-                                <use href="/images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg></a>
                     </li>
                     <li class="social-item"><a class="footer-link link" href="https://twitter.com/" aria-label="Twitter"
                             target="_blank" rel="noreferrer noopener">
                             <svg class="soc-icon" width="20px" height="20px">
-                                <use href="/images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg></a>
                     </li>
                     <li class="social-item"><a class="footer-link link" href="https://www.facebook.com/"
                             aria-label="Facebook" target="_blank" rel="noreferrer noopener">
                             <svg class="soc-icon" width="20px" height="20px">
-                                <use href="/images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg></a>
                     </li>
                     <li class="social-item"><a class="footer-link link" href="https://www.linkedin.com/"
                             aria-label="LinkedIn" target="_blank" rel="noreferrer noopener">
                             <svg class="soc-icon" width="20px" height="20px">
-                                <use href="/images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg></a>
                     </li>
                 </ul>
