--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <header>
         <div class="header-container container">
             <nav class="header-nav">
                 <a href="./index.html" class="logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
