--- a/index.html
+++ b/index.html
@@ -360,6 +360,20 @@
         </div>
 
     </div>
+    <div class="mail-form">
+        <h2 class="form-title">Підпишіться на розсилку</h2>
+        <div role="group" class="form-group">
+        <form>
+            <label for="mail"></label>
+            <input class="mail-input" type="email" name="email" id="mail" autofocus placeholder="E-mail">
+            <button type="submit" class="sub-btn">
+                Підписатися
+                <svg class="sub-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-icon-send-1"></use>
+                </svg></button>
+        </form>
+        </div>
+    </div>
     </div>
     </div>
 </footer>
