--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <div class="mail-form">
         <h2 class="form-title">Підпишіться на розсилку</h2>
         <div role="group" class="form-group">
-        <form>
+        <form class="footer-form">
             <label for="mail"></label>
             <input class="mail-input" type="email" name="email" id="mail" autofocus placeholder="E-mail">
             <button type="submit" class="sub-btn">
