--- a/index.html
+++ b/index.html
@@ -384,6 +384,19 @@
                 <use href="./images/icons.svg#icon-close-icon"></use>
             </svg>
         </button>
+        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="modal-form">
+            <label for="name" class="modal-label">Ім'я</label>
+            <input class="modal-input" type="text" name="username" id="name">
+            <label for="phone" class="modal-label">Телефон</label>
+            <input class="modal-input" type="tel" name="phone_number" id="phone">
+            <label for="mail" class="modal-label">Пошта</label>
+            <input class="modal-input" type="email" name="email" id="mail">
+            <label for="comments-area" class="modal-label">Коментар</label>
+            <textarea class="modal-textarea" name="comments" id="comments-area" rows="5"></textarea>
+            
+
+        </form>
     </div>
 </div>
 <script src="./js/modal.js"></script>
