--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
             </label>
             <label class="textarea-label">Коментар
                 <div class="form-group" role="group">
-                    <textarea name="feedback" rows="6" placeholder="Введіть текст" class="form-textarea"></textarea>
+                    <textarea name="feedback" rows="6" placeholder="Введіть текст" style="width: 448px;
+height: 120px;" class="form-textarea"></textarea>
                 </div>
             </label>
             <div class="form-checkbox" role="group">
@@ -424,6 +425,7 @@
                     <a href="" class="form-link">Умови договору</a>
                 </label>
             </div>
+            <button type="submit" class="modal-form-btn">Відправити</button>
         </form>
     </div>
 </div>
