--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div role="group" class="form-group">
         <form class="footer-form">
             <label for="mail"></label>
-            <input class="mail-input" type="email" name="email" id="mail" autofocus placeholder="E-mail">
+            <input class="mail-input" type="email" name="email" id="mail"  placeholder="E-mail">
             <button type="submit" class="sub-btn">
                 Підписатися
                 <svg class="sub-icon" width="24px" height="24px">
@@ -412,21 +412,20 @@
             </label>
             <label class="textarea-label">Коментар
                 <div class="form-group" role="group">
-                    <textarea name="feedback" rows="6" placeholder="Введіть текст" style="width: 448px;
-height: 120px;" class="form-textarea"></textarea>
+                    <textarea name="feedback" rows="6" placeholder="Введіть текст" class="form-textarea"></textarea>
                 </div>
             </label>
             <div class="form-checkbox" role="group">
                 <input type="checkbox" name="policy" id="checkbox" class="input-check">
                 <span class="checkbox-icon"></span>
-
+            
                 <label class="check-label" for="checkbox">
                     Погоджуюся з розсилкою та приймаю
                     <a href="" class="form-link">Умови договору</a>
                 </label>
             </div>
             <button type="submit" class="modal-form-btn">Відправити</button>
-        </form>
+            </form>
     </div>
 </div>
 <script src="./js/modal.js"></script>
