--- a/portfolio.html
+++ b/portfolio.html
@@ -10,36 +10,35 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <div class="header-container container">
-            <nav class="header-nav">
-                <a href="./index.html" class="logo" lang="en"><span class="web-logo" lang="en">Web</span>Studio</a>
-        
-                <ul class="site-nav list">
-                    <li class="nav-item"><a href="./index.html" class="header-link link">Студія</a></li>
-                    <li class="nav-item"><a href="./portfolio.html" class="header-link link current">Портфоліо</a></li>
-                    <li class="nav-item"><a href="" class="header-link link">Контакти</a></li>
-                </ul>
-            </nav>
-            <div class="header-contacts">
-                <ul class="contacts list">
-                    <li><a href="info@devstudio.com" class="contact">
-                            <svg class="contact-icon" width="16px" height="12px">
-                                <use href="./images/icons.svg#icon-envelope"></use>
-                            </svg>info@devstudio.com
-                        </a>
-                    </li>
-                    <li><a href="+380961111111" class="contact">
-                            <svg class="contact-icon" width="16px" height="12px">
-                                <use href="./images/icons.svg#icon-smartphone"></use>
-                            </svg>+38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
+<header class="header">
+    <div class="header__header-container container">
+        <nav class="nav">
+            <a href="./index.html" class="logo" lang="en"><span class="logo__web-logo" lang="en">Web</span>Studio</a>
+            <ul class="nav__site-nav list">
+                <li class="nav__item"><a href="./index.html" class="nav__link link">Студія</a></li>
+                <li class="nav__item"><a href="./portfolio.html" class="nav__link nav__link--current link">Портфоліо</a></li>
+                <li class="nav__item"><a href="" class="nav__link link">Контакти</a></li>
+            </ul>
+        </nav>
 
+        <div class="header__header-contacts">
+            <ul class="header__contacts list">
+                <li><a href="info@devstudio.com" class="header__contact">
+                        <svg class="header__contact-icon" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+                    </a>
+                </li>
+                <li><a href="+380961111111" class="header__contact">
+                        <svg class="header__contact-icon" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
     <main>
        
         <section class="section">
